name:                static-hs
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Zhen Zhang
maintainer:          izgzhen@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  -- exposed-modules:     
  other-modules:       RDA, LVA, VBEA, AEA, Mono, Common, Example, Label, Iteration
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9, containers, lens
  hs-source-dirs:      src
  default-language:    Haskell2010