name:                static-hs
version:             0.2.0.0
synopsis:            Static analysis algorithms with Haskell
-- description:         
license:             MIT
license-file:        LICENSE
author:              Zhen Zhang
maintainer:          izgzhen@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Language.DFA.Packages.RDA
                       Language.DFA.Packages.LVA
                       Language.DFA.Packages.VBEA
                       Language.DFA.Packages.AEA
                       Language.DFA.Packages.CPA
                       Language.DFA.Core.Mono
                       Language.DFA.Core.Label
                       Language.DFA.Core.Iteration
                       Language.DFA.AST
                       
  other-modules:       Example
                       Language.DFA.Common
                       Language.DFA.AST.Stmt
                       Language.DFA.AST.Recursive
                       Language.DFA.AST.Label
                       Language.DFA.AST.Block
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9, containers, lens
  hs-source-dirs:      src
  default-language:    Haskell2010